--- a/templates/base.html
+++ b/templates/base.html
@@ -7,6 +7,7 @@
   {% load bootstrap5 %}
   {% bootstrap_css %}
   {% bootstrap_javascript %}
+  {% load socialaccount %}
 </head>
 <body>
   <div class="container">
@@ -38,7 +39,7 @@
     {% else %}
       <p>You are not logged in</p>
       <a href="{% url 'login' %}">Log In</a> |
-      <a href="#">Login with Google</a>
+      <a href="{% provider_login_url 'google' %}"> Login with Google</a>
     {% endif %}
   </div>
 
